fix alignment of elements

--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
+*{
+  box-sizing: border-box;
+}
+
 body {
   background-color: black;
   font-family: arial;
   color: white;
 }
+
 h1 {
   color: grey;
   font-family: verdana;
@@ -26,4 +31,21 @@ h1 {
 .result-border {
   border: solid 1px grey;
   border-radius: 5px;
+}
+
+.row {
+  display:flex;
+  align-items: center;
+  margin: 10px 0px;
+  flex-flow: nowrap;
+}
+
+label{
+  flex-grow:1;
+}
+
+#rate-control{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
 }
